--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="default_textview_url">Server Not Started</string>
     <string name="message_activity_button">Show Messages</string>
     <string name="message_textview_default"></string>
+    <string name="message_server_client_disconnect_message">_(CLIENT MESSAGE)client_disconnecting</string>
 </resources>
