--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="stop_stream_button">Stop AV Stream</string>
     <string name="default_textview_url">Server Not Started</string>
     <string name="message_activity_button">Show Messages</string>
+    <string name="audio_activity_button">Audio Server Controls</string>
     <string name="message_textview_default"></string>
     <string name="message_server_client_disconnect_message">_(CLIENT MESSAGE)client_disconnecting</string>
+    <string name="start_audio_service_button">Start Audio Server</string>
+    <string name="stop_audio_service_button">Stop Audio Server</string>
 </resources>
